# dockernel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example_dockerfile  example_rust_dockerfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
dockernel/: __main__.py  app.py  kernelspec.py  version.py
dockernel/cli/: __init__.py  install.py  main.py  start.py
tests/: test_cli.py  test_install.py  test_kernelspec.py
