[metadata]
license_file = LICENSE
name = dockernel
author = Blazej Michalik
author_email = im.mr.mino@gmail.com
description = Utility for creating dockerized Jupyter kernels
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/MrMino/dockernel
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    dockernel
python_requires = >=3.6
install_requires=
    docker
include_package_data = True

[options.entry_points]
console_scripts =
    dockernel = dockernel.__main__:main
